# daimon

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
.superpowers/brainstorm/35279-1774272343/: .server-stopped  cluster-pane.html  sidebar-layout.html
crates/daimon-app/: Cargo.toml
crates/daimon-app/src/: app.rs  auth.rs  auth_guard.rs  db.rs  lib.rs  main.rs  state.rs
crates/daimon-app/src/components/: icons.rs  layout.rs  mod.rs  sidebar.rs  table.rs  tabs.rs  user_menu.rs
crates/daimon-app/src/pages/: dashboard.rs  incident_detail.rs  incidents.rs  login.rs  mod.rs  settings.rs
crates/daimon-app/src/pages/cluster/: add.rs  containers.rs  detail.rs  mod.rs  nodes.rs  storage.rs  vms.rs
crates/daimon-app/src/pages/settings/: mod.rs  update.rs
crates/daimon-app/style/: tailwind.css
crates/daimon-bin/: Cargo.toml
crates/daimon-bin/src/: main.rs
crates/daimon-pve/: Cargo.toml
crates/daimon-pve/src/: client.rs  error.rs  lib.rs  types.rs
docs/plans/: 2026-03-23-phase5-pve-clusters-plan.md  2026-03-23-skeleton-ui-plan.md  2026-03-24-phase55-rich-tables-detail-views-plan.md
docs/specs/: 2026-03-23-phase5-pve-clusters-design.md  2026-03-23-skeleton-ui-design.md  2026-03-24-monitoring-architecture-design.md  2026-03-24-phase55-rich-tables-detail-views-design.md
