[package]
name = "daimon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "AI-driven system engineer for Proxmox"

[[bin]]
name = "daimon"
path = "src/main.rs"

[dependencies]
daimon-pve = { path = "../daimon-pve" }
tokio = { version = "1", features = ["full"] }
