[package]
name = "daimon-pve"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Proxmox VE API client library"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
